SupernovaMPE/samples/Errors/ManyUnclosedIF.nova
Application title = Error.

I want window and window title = Error.
Window height = 130.

[X]. = (1).

DO IF [X] = (1).
DO IF [X] = (1).
DO IF [X] = (1).
endif
DO IF [X] = (1).
DO IF [X] = (1).